Transition splash container image to CSS background-image to prevent layout shift

--- a/style.css
+++ b/style.css
@@ -176,8 +176,12 @@ img {
 .splash-container {
   position: relative;
   width: 100%;
-  max-width: min(95vw, calc(95vh * 682 / 1072));
-  aspect-ratio: 682 / 1072;
+  max-width: min(95vw, calc(95vh * 1081 / 1701));
+  aspect-ratio: 1081 / 1701;
+  background-image: url('images/main-image.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -195,12 +199,6 @@ img {
   to {
     transform: scale(1);
   }
-}
-
-.splash-image {
-  width: 100%;
-  height: 100%;
-  display: block;
 }
 
 .btn-open-transparent {
